Fix padding when code blocks overflow
Use `display: inline-block` rather than `display: block` to prevent the code block from being constrained by its container, which means the padding is applied correctly when it overflows.

--- a/src/stylesheets/components/_tabs.scss
+++ b/src/stylesheets/components/_tabs.scss
@@ -162,7 +162,7 @@
 }
 
 .app-tabs__container pre code {
-  display: block;
+  display: inline-block;
   padding: govuk-spacing(4);
 
   .js-enabled & {
